navbar collapse color correct

--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -13,7 +13,7 @@
 #nav-brand {
   font-family: 'Bebas Neue', cursive;
   color: white;
-  font-size: 30px;
+  font-size: 36px;
   padding: 0;
 }
 
